--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Start Advance</h1>
     <h2>Create new commit</h2>
     <h3>Creane nwe branch</h3>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quasi ullam, officiis deleniti ratione, maxime saepe eveniet rem, explicabo doloribus ipsum dolorum necessitatibus. Sequi omnis quaerat, fuga tenetur non rerum.</p>
 
 </body>
 </html>
